gke-version/k8s/mud-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mud
  annotations:
    # Use Network Endpoint Group so traffic directly laod balanced to pods
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"ports": {"9999":"mud-backendconfig"}}'
spec:
  sessionAffinity: ClientIP 
  selector:
    app: mud
  ports:
  - protocol: TCP
    port: 9999
    name: mud
    targetPort: 9999
  type: ClusterIP
