gke-version/k8s/mud-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    # nginx.ingress.kubernetes.io/websocket-services: mud
    # nginx.org/websocket-services: mud
    # kubernetes.io/ingress.class: gce
spec:
  backend:
    serviceName: mud
    servicePort: 9999
  rules:
    - host:
      http:
        paths:
        - path: /ws
          backend:
            serviceName: mud
            servicePort: 9999
        - path: /*
          backend:
            serviceName: mud
            servicePort: 9999
        - path: /
          backend:
            serviceName: mud
            servicePort: 9999
